--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="https://gamerbraves.sgp1.cdn.digitaloceanspaces.com/2019/04/Ramen-Ichiraku-Feature-Image.jpg">
+    
+    <h1><center>Odin Recipes</center></h1>
+    <center><img src="https://i.pinimg.com/originals/e8/9f/2c/e89f2c4f275647d03cbc5fe6f78a111f.jpg" width="400" height="400"> </center>
+    <h2>Recipes:</h2>
+    <ul>
+    <li><a href="recipes/matarPanner.html">Mattar Paneer </li>
+    <li><a href="recipes/pasta.html">Pasta</li>
+    </ul>
 
 </body>
 </html>
