--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     
-    <h1><center>Odin Recipes</center></h1>
-    <center><img src="https://i.pinimg.com/originals/e8/9f/2c/e89f2c4f275647d03cbc5fe6f78a111f.jpg" width="400" height="400"> </center>
+    <h1>Odin Recipes</h1>
+    <img src="https://i.pinimg.com/originals/e8/9f/2c/e89f2c4f275647d03cbc5fe6f78a111f.jpg" width="400" height="400">
     <h2>Recipes:</h2>
     <ul>
     <li><a href="recipes/matarPanner.html">Mattar Paneer </li>
